--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
         "webpack": "^3.6.0",
         "webpack-bundle-analyzer": "^2.9.0",
         "webpack-dev-server": "^2.9.1",
-        "webpack-merge": "^4.1.0"
+        "webpack-merge": "^4.1.0",
+        "resolve-url-loader": "^2.2.1"
     },
     "engines": {
         "node": ">= 6.0.0",
