--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     },
     "dependencies": {
         "vue": "^2.5.2",
-        "vue-router": "^3.0.1"
+        "vue-router": "^3.0.1",
+        "element-ui": "^2.2.1",
+        "better-scroll": "^1.8.4"
     },
     "devDependencies": {
         "autoprefixer": "^7.1.2",
